<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/outline_explore_nearby_24"
        android:title="@string/mappin" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan"
        android:title="@string/scan" />

    <item
        android:id="@+id/navigation_articles"
        android:icon="@drawable/article"
        android:title="@string/title_articles" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark_border_24"
        android:title="@string/bookmark" />
</menu>