<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.trashup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.bangkit.trashup.ui.maps.MapsFragment"
        android:label="@string/mappin"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit.trashup.ui.analyze.UploadFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.bangkit.trashup.ui.articles.ArticlesFragment"
        android:label="@string/title_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.bangkit.trashup.ui.favorite.FavoriteFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_favorite" />
</navigation>